--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "argparse>=1.4.0",
     "termcolor>=2.1.1",
     "requests>=2.28.1",
+    "tqdm>=4.64.1",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
