--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "termcolor>=2.1.1",
     "requests>=2.28.1",
     "tqdm>=4.64.1",
+    "numpy>=1.24.0",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
