--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "requests>=2.28.1",
     "tqdm>=4.64.1",
     "numpy>=1.24.0",
+    "python-dotenv>=1.0.0",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
